--- a/styles.css
+++ b/styles.css
@@ -498,7 +498,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 100%;
-    height: 360px; /* Mantener altura fija en escritorio */
+    height: 400px; /* Altura fija para consistencia */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -3077,4 +3077,24 @@ font-size: 1rem;
 
 .share-fallback-content button:nth-child(5):hover {
     background-color: #c82333;
+}
+/* Estilos para la etiqueta de Oferta */
+.offer-label {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background-color: rgba(255, 0, 0, 0.844);
+    color: #ffffffe2;
+    font-size: 13px;
+    font-weight: bold;  
+    padding: 5px 10px;
+    border-radius: 4px;
+    z-index: 10;
+    text-transform: uppercase;
+}
+
+/* Asegura que la tarjeta tenga posición relativa para que la etiqueta absoluta funcione */
+.product-card {
+    position: relative;
+    
 }
