--- a/styles.css
+++ b/styles.css
@@ -3098,3 +3098,60 @@ font-size: 1rem;
     position: relative;
     
 }
+.nav-menu {
+    font-size: 13px;
+    font-weight:normal;
+    font-family: 'Roboto', sans-serif;  
+    text-align: center;
+
+}
+
+/* Estilos para el header-contact */
+.header-contact {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 5px;
+    margin-right: 15px;
+}
+
+.contact-item {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    color: #12b50c;
+}
+
+.contact-item p {
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+.contact-item a {
+    color: #12b50c;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    transition: color 0.3s;
+}
+
+.contact-item a:hover {
+    color: #b1ff9b; /* Cambia al color que prefieras para el hover */
+}
+
+.contact-icon {
+    margin-right: 8px;
+    stroke: #12b50c; /* Color del ícono */
+}
+
+@media (max-width: 768px) {
+    .header-contact {
+        align-items: left;
+        margin-right: 0;
+    }
+
+    .contact-item {
+        font-size: 1px;
+    }
+}
