--- a/styles.css
+++ b/styles.css
@@ -410,6 +410,18 @@ body {
     transform: translate(-50%, -50%);
 }
 
+.slide a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+.slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit:contain; /* Ajusta según el diseño de tu carrusel */
+}
+
 /* Botones de navegación */
 .carousel-btn {
     position: absolute;
@@ -1213,9 +1225,9 @@ font-size: 0.8rem;
 }
 
 .contact-item h3 {
-    font-size: 18px;
+    font-size: 20px;
     color: #333333;
-    margin-bottom: 10px;
+ 
 }
 
 .contact-item p {
@@ -1230,7 +1242,7 @@ font-size: 0.8rem;
 }
 
 .contact-item a:hover {
-    color: #E55A00;
+    color: #ffa872;
 }
 
 .map-link {
@@ -1547,7 +1559,7 @@ font-size: 0.8rem;
 
     .contact-page {
         margin-top: 0;
-        padding-top: 10px;
+
     }
 
     .contact-section {
@@ -3111,7 +3123,7 @@ font-size: 1rem;
     display: flex;
     align-items: center;
     font-size: 20px;
-    color: #12b50c;
+    color: #FF6200;
 }
 
 .contact-item p {
@@ -3121,7 +3133,7 @@ font-size: 1rem;
 }
 
 .contact-item a {
-    color: #12b50c;
+    color: #FF6200;
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -3129,12 +3141,12 @@ font-size: 1rem;
 }
 
 .contact-item a:hover {
-    color: #b1ff9b; /* Cambia al color que prefieras para el hover */
+    color: #ffa872; /* Cambia al color que prefieras para el hover */
 }
 
 .contact-icon {
     margin-right: 8px;
-    stroke: #12b50c; /* Color del ícono */
+    stroke: #12a141; /* Color del ícono */
 }
 
 @media (max-width: 768px) {
@@ -3153,7 +3165,7 @@ font-size: 1rem;
     }
 
     .contact-item {
-        color: #12b50c;
+        color: #ff6200;
         display: flex;
         align-items: right;
         justify-content: flex-end; /* Asegurar alineación derecha */
@@ -3161,13 +3173,13 @@ font-size: 1rem;
         
     }
     .contact-item a {
-        color: #12b50c;
+        color: #ff6200;
         font-size: 15px; /* Tamaño legible pero compacto */
         margin-right: 5px;
         
     }
     .contact-item a:hover {
-        color: #12b50c;
+        color: #ffa872;
         
     }
 
