--- a/styles.css
+++ b/styles.css
@@ -3217,10 +3217,7 @@ font-size: 1rem;
         display: block;
     }
 
-    
-
 }
-
 /* Estilo para la etiqueta de descuento */
 .product-card .discount-label {
     position: absolute;
@@ -3280,7 +3277,7 @@ font-size: 1rem;
 }
 /* Discount label for product page */
 .product-info .discount-label {
-    background-color: #e91e63;
+    background-color: #ff0000;
     color: white;
     padding: 5px 10px;
     font-size: 14px;
@@ -3301,7 +3298,7 @@ font-size: 1rem;
 /* Discounted price (highlighted) */
 .product-info .discount-price {
     color: #ff0000;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     margin-bottom: 5px;
 }
