--- a/styles.css
+++ b/styles.css
@@ -673,11 +673,11 @@ body {
 
 /* Clase para ocultar el header */
 .product-page .header.hidden {
-    transform: translateY(-60%); /* Mueve el header fuera de la pantalla hacia arriba */
+    transform: translateY(50%); /* Mueve el header fuera de la pantalla hacia arriba */
     transition: transform 0.3s ease;
 }
 /* Header parcialmente visible (scroll hacia arriba) */
-.product-page .header.show {
+.product-page .header.visible {
     transform: translateY(0%); /* Muestra solo el 40% superior del header */
     transition: transform 0.3s ease;
 }
